feat: integrate notifications